@@ -27,7 +27,9 @@ import org.apache.hadoop.hive.common.JavaUtils;
 import org.apache.hadoop.hive.ql.plan.FunctionWork;
 import org.apache.hadoop.hive.ql.plan.createFunctionDesc;
 import org.apache.hadoop.hive.ql.plan.dropFunctionDesc;
+import org.apache.hadoop.hive.ql.udf.generic.GenericUDAFResolver;
 import org.apache.hadoop.hive.ql.udf.generic.GenericUDF;
+import org.apache.hadoop.util.ReflectionUtils;
 import org.apache.hadoop.util.StringUtils;
 import org.apache.hadoop.hive.ql.exec.FunctionInfo.OperatorType;
 
@@ -72,7 +74,11 @@ public class FunctionTask extends Task<FunctionWork> {
         FunctionRegistry.registerUDAF(createFunctionDesc.getFunctionName(),
                                       (Class<? extends UDAF>) udfClass);
         return 0;
-      } 
+      } else if(GenericUDAFResolver.class.isAssignableFrom(udfClass)) {
+        FunctionRegistry.registerGenericUDAF(createFunctionDesc.getFunctionName(),
+            (GenericUDAFResolver)ReflectionUtils.newInstance(udfClass, null));
+        return 0;
+      }
       return 1;
 
     } catch (ClassNotFoundException e) {
